# chromasurr

./: .buildinfo  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  tox.ini  usage.html
.doctrees/: authors.doctree  contributing.doctree  history.doctree  index.doctree  installation.doctree  readme.doctree  usage.doctree
.doctrees/api/: chromasurr.doctree  chromasurr.error_analysis.doctree  chromasurr.metrics.doctree  chromasurr.sensitivity.doctree  chromasurr.surrogate.doctree  chromasurr.uq.doctree  chromasurr.visualize.doctree  modules.doctree
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docs.yml  test.yml
_modules/: index.html
_modules/chromasurr/: error_analysis.html  metrics.html  sensitivity.html  surrogate.html  uq.html
_sources/: installation.rst.txt  usage.rst.txt
_sources/api/: chromasurr.error_analysis.rst.txt  chromasurr.sensitivity.rst.txt  chromasurr.surrogate.rst.txt  chromasurr.uq.rst.txt
api/: chromasurr.error_analysis.html  chromasurr.html  chromasurr.metrics.html  chromasurr.sensitivity.html  chromasurr.surrogate.html  chromasurr.uq.html  chromasurr.visualize.html  modules.html
docs/: Makefile  conf.py  index.rst  make.bat
docs/api/: chromasurr.metrics.rst  chromasurr.rst  chromasurr.visualize.rst  modules.rst
examples/: Demo.py  chromasurr_demo.py  metrics_eda.py  surrogate_validation.py
src/chromasurr/: __init__.py  calibration.py  cli.py  config.py  error_analysis.py  metrics.py  model.py  models.py  sensitivity.py  sensitivity_analysis.py  simulation.py  surrogate.py  surrogate_class.py  uq.py  utils.py  visualization.py  visualize.py
src/chromasurr/process/: batch_elution.py
tests/: Demo.py  __init__.py  test_chromasurr.py  test_mcmc.py  test_metrics.py  test_sensitivity.py  test_surrogate.py  test_uq.py
