[tool.poetry]
name         = "chromasurr"
version      = "0.1.0"
description  = "Surrogate modeling and Bayesian calibration of chromatographic processes using CADET and Gaussian Processes."
authors      = ["Tala Al-Sunna <tala.sunna@gmail.com>"]
license      = "MIT"
readme       = "README.rst"
homepage     = "https://github.com/talasunna/chromasurr"
repository   = "https://github.com/talasunna/chromasurr"
documentation= "https://talasunna.github.io/chromasurr"  # â† your live docs
keywords     = ["chromatography", "CADET", "surrogate", "Bayesian", "MCMC"]

packages = [{ include = "chromasurr", from = "src" }]

[tool.poetry.dependencies]
python         = ">=3.12,<4"
typer          = "*"
matplotlib     = "*"
scikit-learn   = "*"
emcee          = "*"
numpy          = "*"
SALib          = "*"
cadet-process  = ">=0.11.1"

[tool.poetry.group.dev.dependencies]
pytest       = "^8.3"
coverage     = "^7.6"
mypy         = "^1.10"
ruff         = "^0.5"
black        = "^24.8"
tox          = "^4.15"
watchdog     = "^3.0"
sphinx       = "^8.2"
twine        = "^5.1"
wheel        = "^0.43"
bump2version = "^1.0.1"

[tool.poetry.scripts]
chromasurr = "chromasurr.cli:app"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files            = "."
strict           = true
warn_unreachable = true
warn_no_return   = true

[[tool.mypy.overrides]]
module             = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
